--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.First" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.HealthCompanion" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
- <item name="colorPrimary">#FF6E40</item>
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
