--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,94 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".MainActivity">
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="HEALTH COMPANION"
+    android:textAlignment="center"
+    android:layout_marginTop="100dp"
+    android:textSize="25sp"
+    style="@style/TextAppearance.Material3.BodyLarge"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    />
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <Button
+        android:id="@+id/btn_symptom_predictor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Health Companion"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/holo_blue_dark"
+        android:text="Disease Predictor"
+        android:layout_marginTop="250dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="24dp"
-        android:gravity="center"/>
-
-    <EditText
-        android:id="@+id/etSymptoms"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Enter your symptoms (up to 10)"
-        android:padding="16dp"
-        android:background="@drawable/edittext_background"
-        android:layout_marginBottom="8dp"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/tvLimitMessage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="You can add up to 10 symptoms."
-        android:textSize="14sp"
-        android:textColor="@android:color/holo_red_dark"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/etSymptoms"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvLimitMessage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp" />
-
     <Button
-        android:id="@+id/btnPredict"
-        android:layout_width="0dp"
+        android:id="@+id/btn_bmi_calculator"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Predict"
-        android:backgroundTint="@android:color/holo_blue_light"
-        android:textColor="@android:color/white"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/chipGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/tvPrediction"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@android:color/holo_blue_dark"
-        app:layout_constraintTop_toBottomOf="@id/btnPredict"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="BMI Calculator"
         android:layout_marginTop="16dp"
-        android:gravity="center" />
-
-    <Button
-        android:id="@+id/btnGoToBMICalculator"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="236dp"
-        android:backgroundTint="@android:color/holo_blue_light"
-        android:text="Go to BMI Calculator"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@id/btn_symptom_predictor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
-
+        app:layout_constraintEnd_toEndOf="parent" />
+<Button
+    android:id="@+id/btn_food_library"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Food Library"
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toBottomOf="@id/btn_bmi_calculator"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
