--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/drawable/button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="12dp"/>
-    <solid android:color="@color/colorPrimary"/>
-    <padding android:left="16dp" android:right="16dp" android:top="12dp" android:bottom="12dp"/>
+    <gradient
+        android:startColor="#FF5722"
+        android:endColor="#F4511E"
+        android:angle="45" />
+    <corners android:radius="8dp" />
 </shape>
