--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,5 +1,8 @@
+<!-- res/drawable/edit_text_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
+    <solid android:color="#FFFFFF" />
     <corners android:radius="8dp" />
-    <stroke android:width="1dp" android:color="@android:color/darker_gray" />
+    <stroke
+        android:width="1dp"
+        android:color="#B0BEC5" />
 </shape>
