--- a/app/src/main/res/drawable/text_view_background.xml
+++ b/app/src/main/res/drawable/text_view_background.xml
@@ -1,5 +1,5 @@
+<!-- res/drawable/text_view_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
+    <solid android:color="#F5F5F5" />
     <corners android:radius="8dp" />
-    <stroke android:width="1dp" android:color="@android:color/darker_gray" />
 </shape>
