--- a/app/src/main/res/layout/activity_bmi_calculator.xml
+++ b/app/src/main/res/layout/activity_bmi_calculator.xml
@@ -14,7 +14,7 @@
         android:text="BMI Calculator"
         android:textSize="26sp"
         android:textStyle="bold"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -26,8 +26,9 @@
         android:hint="Enter weight (kg)"
         android:inputType="numberDecimal"
         android:textSize="18sp"
-        android:imeOptions="actionDone"
-        android:padding="14dp"
+        android:padding="16dp"
+        android:drawableStart="@drawable/ic_weight"
+        android:drawablePadding="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -44,8 +45,9 @@
         android:hint="Enter height (cm)"
         android:inputType="numberDecimal"
         android:textSize="18sp"
-        android:imeOptions="actionDone"
-        android:padding="14dp"
+        android:padding="16dp"
+        android:drawableStart="@drawable/ic_height"
+        android:drawablePadding="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -66,6 +68,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_background"
         android:textColor="@android:color/white"
+        android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@id/et_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Your BMI will appear here"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
         android:gravity="center"
@@ -86,6 +89,19 @@
         app:layout_constraintTop_toBottomOf="@id/btn_calculate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_category"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Category"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_result"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ProgressBar
         android:id="@+id/bmi_progress"
         style="@android:style/Widget.ProgressBar.Horizontal"
@@ -93,20 +109,24 @@
         android:layout_height="20dp"
         android:max="40"
         android:progress="0"
-        android:progressDrawable="@drawable/bmi_progress_bar"
-        app:layout_constraintTop_toBottomOf="@id/tv_result"
+        android:background="@color/white"
+        android:progressTint="@color/white"
+        android:progressBackgroundTint="@color/white"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_category"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
         android:id="@+id/bmi_pointer"
         android:layout_width="10dp"
-        android:layout_height="30dp"
-        android:background="@android:color/black"
+        android:layout_height="20dp"
+        android:layout_marginTop="-10dp"
+        android:background="@drawable/bmi_pointer"
         app:layout_constraintTop_toBottomOf="@id/bmi_progress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintLeft_toLeftOf="@id/bmi_progress"
+        app:layout_constraintRight_toRightOf="@id/bmi_progress"
+        app:layout_constraintHorizontal_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
